# smallbox

./: .travis.yml  Cargo.toml  LICENCE  README.md  build.rs  index.html
.github/workflows/: ci.yml
benches/: compare.rs  lib.rs
doc/: aliases.js  search-index.js  source-files.js
doc/implementors/core/clone/: trait.Clone.js
doc/implementors/core/cmp/: trait.Eq.js  trait.Ord.js  trait.PartialEq.js  trait.PartialOrd.js
doc/implementors/core/fmt/: trait.Debug.js  trait.Display.js  trait.Pointer.js
doc/implementors/core/hash/: trait.Hash.js
doc/implementors/core/marker/: trait.Send.js  trait.Sync.js
doc/implementors/core/ops/deref/: trait.Deref.js  trait.DerefMut.js
doc/implementors/core/ops/drop/: trait.Drop.js
doc/implementors/core/ops/unsize/: trait.CoerceUnsized.js
doc/smallbox/: all.html  index.html  macro.smallbox!.html  macro.smallbox.html  sidebar-items.js  struct.SmallBox.html
doc/smallbox/smallbox/: SmallBox.t.html  struct.SmallBox.html
doc/smallbox/space/: S1.t.html  S16.t.html  S2.t.html  S32.t.html  S4.t.html  S64.t.html  S8.t.html  index.html  sidebar-items.js  struct.S1.html  struct.S16.html  struct.S2.html  struct.S32.html  struct.S4.html  struct.S64.html  struct.S8.html
doc/src/smallbox/: lib.rs.html  smallbox.rs.html  space.rs.html
src/: lib.rs  smallbox.rs  space.rs  sptr.rs  stackbox.rs
tests/: lib.rs  smallbox.rs  stackbox.rs
