[package]
name = "smallbox"
version = "0.8.7"
authors = ["andylokandy"]
description = "`Small Box` optimization: store small item on stack and fallback to heap for large item."
repository = "https://github.com/andylokandy/smallbox"
documentation = "https://andylokandy.github.io/smallbox"
categories = ["data-structures"]
readme = "README.md"
keywords = ["box", "alloc", "dst", "stack", "no_std"]
license = "MIT"
rust-version = "1.56"
edition = "2021"

[features]
default = ["std"]
std = []
coerce = []
nightly = ["coerce"]

[dev-dependencies]
futures = { version = "0.3", default-features = false, features = ["executor"] }
